Version 0.1.0:
    * Initial SOCKS5 proxy support.
    * Fix issue where track resolving spinner never stopped if tracks were
      removed from playlist while resolving.
    * Fix issues with stations where multiple tracks could be added at once.
    * Allow multiple accounts of the same type.
    * Add new Google account type that is a thin wrapper around a Jabber plugin.
    * Overhaul the settings dialog interface.
    * Resolvers can now be enabled and disabled, and some can be configured
      directly in Tomahawk.
    * Split playlists and stations in sources tree view. Show Recently Played
      as a node under the Super Collection.
    * Fix massive speed bottleneck on startup in the case of many recently
      played playlists.
    * Browse and play collections in our snappy tree-view, which also shows
      images for artists and albums.
    * Fixed crash that could occur when playing a track from a browser.
    * Fixed a crash caused by sources going on- or offline.
    * (OS X) Open configuration dialogs as sliding sheets.
    * (OS X) Increase our available file watches to the maximum that the system
      reports.

Version 0.0.3:
    * Show spinner while resolving playlists.
    * Go back to previous page visible when deleting a playlist.
    * Fixed issue where automatic playlists and station summaries were not
      updated in the playlist header.
    * Fixed an issue which caused duplicate items when rescanning.
    * Revert change introduced in 0.0.2 causing Twitter protocol to not try
      to reconnect to a peer if it couldn't connect the first time the plugin
      was connected. This caused confusing (and for most unwanted) behavior.
    * Fix crashes in Twitter authentication.
    * Properly honor the chosen port number if a static host and port are
      marked as preferred.
    * Don't automatically try to resolve all incoming playback logs. This
      speeds up importing sources a lot.